@@ -10,7 +10,7 @@ my $table = $session->param( "table" );
 $table = $session->get_database->quote_identifier("ac_".$table);
 my $sql;
 my $term = EPrints::Database::prep_like_value( $string_frag );
-$sql = "SELECT url,name,value from $table WHERE name LIKE '%$term%' OR value LIKE '%$term%' LIMIT 10";
+$sql = "SELECT url,name,value from $table WHERE name LIKE '%$term%' OR value LIKE '%$term%'";
 
 my $doc = $session->make_element( 'ul' );
 
@@ -18,7 +18,7 @@ print <<END;
 <?xml version="1.0" encoding="UTF-8" ?>
 
 END
-my $sth = $session->get_database->prepare( $sql );
+my $sth = $session->get_database->prepare_select( $sql, 'limit' => 10 );
 $session->get_database->execute( $sth , $sql );
 my $first = 1;
 while( my( $url,$name,$value ) = $sth->fetchrow_array )
